# crabula

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  OT128.json  package.xml
config/: OT128.param.yaml
crabula_cli/: Cargo.toml
crabula_cli/src/: main.rs
crabula_core/: Cargo.toml
crabula_core/src/: backbone.rs  lib.rs  sensor.rs  sensors.rs
crabula_hesai/: Cargo.toml
crabula_hesai/src/: packet.rs
crabula_hesai_ot128/: Cargo.toml
crabula_hesai_ot128/src/: lib.rs  packet.rs
crabula_registry/: Cargo.toml
crabula_registry/src/: lib.rs
crabula_ros/: Cargo.toml  package.xml
crabula_ros/src/: main.rs
nebula_msgs/: CMakeLists.txt  package.xml
schema/: OT128.json
src/: backbone.rs  lib.rs  main.rs  sensor.rs
src/sensors/: mod.rs
src/sensors/hesai/: mod.rs  packet.rs
src/sensors/hesai/ot128/: mod.rs  packet.rs
src/sensors/ot128/: mod.rs
