[package]
name = "crabula_hesai_ot128"
version = "0.1.0"
edition = "2021"

[dependencies]
crabula_core = { path = "../crabula_core" }
crabula_hesai = { path = "../crabula_hesai" }
jsonschema = { version = "0.18.0", features = ["resolve-file"] }
num-derive = "0.4.2"
num-traits = "0.2.19"
once_cell = "1.19.0"
regex = "1.10.6"
schemars = "1.0.0-alpha.3"
serde = "1.0.208"
serde_json = { version = "1.0.118", features = ["std"] }
static_assertions = "1.1.0"
thiserror = "1.0.63"
zerocopy = { version = "0.7.35", features = ["derive"] }
