[package]
name = "crabula_ros"
version = "0.1.0"
edition = "2021"

[dependencies]
crabula_core = "0.1.0"
clap = "4.5.16"
jsonschema = { version = "0.18.0", features = ["resolve-file"] }
num-derive = "0.4.2"
num-traits = "0.2.19"
once_cell = "1.19.0"
regex = "1.10.6"
schemars = "1.0.0-alpha.3"
serde = "1.0.208"
serde_json = { version = "1.0.118", features = ["std"] }
serde_yaml = "0.9.34"
static_assertions = "1.1.0"
thiserror = "1.0.63"
zerocopy = { version = "0.7.35", features = ["derive"] }
